<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbinicio"
        android:id="@+id/txTelaInicial"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btquarto1"
        android:id="@+id/btQuarto1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/txTelaInicial"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="75dp"
        android:onClick="clicar" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btquarto2"
        android:id="@+id/btQuarto2"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/btQuarto1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="clicar" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btsala"
        android:id="@+id/btSala"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/btQuarto2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btcozinha"
        android:id="@+id/btCozinha"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/btSala"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btbanheiro"
        android:id="@+id/btBanheiro"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/btCozinha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btgaragem"
        android:id="@+id/btGaragem"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/btBanheiro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btarcondicionado"
        android:id="@+id/btArCondicionado"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/btGaragem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbsetor"
        android:id="@+id/txSetor"
        android:layout_below="@+id/txTelaInicial"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbstatus"
        android:id="@+id/txStatus"
        android:layout_alignBottom="@+id/txSetor"
        android:layout_alignRight="@+id/txTelaInicial"
        android:layout_alignEnd="@+id/txTelaInicial" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageButton"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_above="@+id/btQuarto2"
        android:layout_alignLeft="@+id/txStatus"
        android:layout_alignStart="@+id/txStatus"
        android:layout_alignTop="@+id/btQuarto1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imagemLiga"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageButton"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton"
        android:layout_alignBottom="@+id/btQuarto2"
        android:src="@drawable/btimagem" />


</RelativeLayout>
